--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,10 @@
     div.separator {
         padding: 20px !important;
     }
+
+    h1.nextpage {
+        padding-bottom: 100px;
+    }
 }
 
 /* Base Styles Start */
@@ -159,7 +163,6 @@ div.separator img {
 h1.nextpage {
     text-align: center;
     display: none;
-    padding-bottom: 100px;
 }
 
 /* Highlight when following anchors in the FAQ, since we are at the bottom of the file people cant tell what happens on click */
